# streamline-template-repository

./: Cargo.toml  Makefile  build.rs  rust-toolchain.toml  shell.nix  substreams.yaml
src/: builtins.rs  custom_serde.rs  lib.rs  streamline.rs
src/abi/: erc721.rs
