[package]
name = "streamline"
version = "0.1.0"
edition = "2021"

[lib]
name = "streamline"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0.0"
num-bigint = "0.4.4"
phf = {version = "0.11.2", features = ["macros"]}
prost-wkt-types = "0.4.2"
prost = "0.11"
rhai = { git = "https://github.com/MercuricChloride/rhai", branch = "streamline", default-features = false, features = ["std", "no_time", "serde", "substreams_runtime"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
substreams = "0.5.12"
substreams-database-change = "1.3.0"
substreams-entity-change = { git = "https://github.com/MercuricChloride/substreams-sink-entity-changes.git", branch = "develop" }
substreams-ethereum = "0.9.9"
derive_more = "0.99.17"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true

[build-dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.80"
substreams-ethereum = "0.9.9"
convert_case = "0.6.0"
